-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.5.0
-
None
-
openSUSE 13.2 x64
-
fdbee2783a76505a93a23d142f0199a85bb2f35c
I was debugging with Qt Creator. The application was waiting on a C++ breakpoint and when I pressed "Continue", Creator crashed.
The backtrace:
Application: qtcreator (qtcreator), signal: Segmentation fault Using host libthread_db library "/lib64/libthread_db.so.1". 81 T_PSEUDO (SYSCALL_SYMBOL, SYSCALL_NAME, SYSCALL_NARGS) [Current thread is 1 (Thread 0x7fa52027a780 (LWP 4984))] Thread 13 (Thread 0x7fa512202700 (LWP 4986)): #0 0x00007fa51de00c5d in poll () at ../sysdeps/unix/syscall-template.S:81 #1 0x00007fa51a32d322 in _xcb_conn_wait (__timeout=-1, __nfds=1, __fds=0x7fa512201d40) at /usr/include/bits/poll2.h:46 #2 0x00007fa51a32d322 in _xcb_conn_wait (c=c@entry=0x22bb000, cond=cond@entry=0x22bb040, vector=vector@entry=0x0, count=count@entry=0x0) at xcb_conn.c:459 #3 0x00007fa51a32edef in xcb_wait_for_event (c=0x22bb000) at xcb_in.c:623 #4 0x00007fa515250ba9 in QXcbEventReader::run() (this=0x22c9110) at qxcbconnection.cpp:1214 #5 0x00007fa51e8b84ff in QThreadPrivate::start(void*) (arg=0x22c9110) at thread/qthread_unix.cpp:331 #6 0x00007fa51e5f90a4 in start_thread (arg=0x7fa512202700) at pthread_create.c:309 #7 0x00007fa51de0908d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111 Thread 12 (Thread 0x7fa4eddca700 (LWP 4988)): #0 0x00007fa51cc1b904 in g_mutex_unlock (mutex=0x7fa4e80009b0) at gthread-posix.c:1343 #1 0x00007fa51cbd9280 in g_main_context_prepare (context=context@entry=0x7fa4e80009b0, priority=priority@entry=0x7fa4eddc9d18) at gmain.c:3397 #2 0x00007fa51cbd9b03 in g_main_context_iterate (context=context@entry=0x7fa4e80009b0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at gmain.c:3761 #3 0x00007fa51cbd9cec in g_main_context_iteration (context=0x7fa4e80009b0, may_block=1) at gmain.c:3842 #4 0x00007fa51eaea47b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=0x7fa4e80008e0, flags=...) at kernel/qeventdispatcher_glib.cpp:420 #5 0x00007fa51ea91523 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (this=this@entry=0x7fa4eddc9e50, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204 #6 0x00007fa51e8b37fa in QThread::exec() (this=<optimized out>) at thread/qthread.cpp:503 #7 0x00007fa51e8b84ff in QThreadPrivate::start(void*) (arg=0x2b0f6a0) at thread/qthread_unix.cpp:331 #8 0x00007fa51e5f90a4 in start_thread (arg=0x7fa4eddca700) at pthread_create.c:309 #9 0x00007fa51de0908d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111 Thread 11 (Thread 0x7fa4ed5b9700 (LWP 4989)): #0 0x00007fa51de00c5d in poll () at ../sysdeps/unix/syscall-template.S:81 #1 0x00007fa51cbd9be4 in g_main_context_iterate (priority=2147483647, n_fds=1, fds=0x7fa4e0002e70, timeout=-1, context=0x7fa4e00009b0) at gmain.c:4076 #2 0x00007fa51cbd9be4 in g_main_context_iterate (context=context@entry=0x7fa4e00009b0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at gmain.c:3776 #3 0x00007fa51cbd9cec in g_main_context_iteration (context=0x7fa4e00009b0, may_block=1) at gmain.c:3842 #4 0x00007fa51eaea47b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=0x7fa4e00008e0, flags=...) at kernel/qeventdispatcher_glib.cpp:420 #5 0x00007fa51ea91523 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (this=this@entry=0x7fa4ed5b8e30, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204 #6 0x00007fa51e8b37fa in QThread::exec() (this=this@entry=0x3902860) at thread/qthread.cpp:503 #7 0x00007fa504498428 in QQmlThreadPrivate::run() (this=0x3902860) at /usr/src/debug/qtdeclarative-opensource-src-5.5.0/src/qml/qml/ftw/qqmlthread.cpp:141 #8 0x00007fa51e8b84ff in QThreadPrivate::start(void*) (arg=0x3902860) at thread/qthread_unix.cpp:331 #9 0x00007fa51e5f90a4 in start_thread (arg=0x7fa4ed5b9700) at pthread_create.c:309 #10 0x00007fa51de0908d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111 Thread 10 (Thread 0x7fa4e72aa700 (LWP 5780)): #0 0x00007fa51e5fd05f in pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185 #1 0x00007fa4fbe3f9e3 in WTF::TCMalloc_PageHeap::scavengerThread() () at /usr/lib64/libQt5WebKit.so.5 #2 0x00007fa4fbe3fa09 in WTF::TCMalloc_PageHeap::runScavengerThread(void*) () at /usr/lib64/libQt5WebKit.so.5 #3 0x00007fa51e5f90a4 in start_thread (arg=0x7fa4e72aa700) at pthread_create.c:309 #4 0x00007fa51de0908d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111 Thread 9 (Thread 0x7fa4dadf6700 (LWP 5781)): #0 0x00007fa51de00c5d in poll () at ../sysdeps/unix/syscall-template.S:81 #1 0x00007fa51cbd9be4 in g_main_context_iterate (priority=2147483647, n_fds=1, fds=0x7fa4dce8fcf0, timeout=7532, context=0x7fa4dfed9ba0) at gmain.c:4076 #2 0x00007fa51cbd9be4 in g_main_context_iterate (context=context@entry=0x7fa4dfed9ba0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at gmain.c:3776 #3 0x00007fa51cbd9cec in g_main_context_iteration (context=0x7fa4dfed9ba0, may_block=1) at gmain.c:3842 #4 0x00007fa51eaea47b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=0x7fa4dc061ce0, flags=...) at kernel/qeventdispatcher_glib.cpp:420 #5 0x00007fa51ea91523 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (this=this@entry=0x7fa4dadf5e50, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204 #6 0x00007fa51e8b37fa in QThread::exec() (this=<optimized out>) at thread/qthread.cpp:503 #7 0x00007fa51e8b84ff in QThreadPrivate::start(void*) (arg=0xb726a20) at thread/qthread_unix.cpp:331 #8 0x00007fa51e5f90a4 in start_thread (arg=0x7fa4dadf6700) at pthread_create.c:309 #9 0x00007fa51de0908d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111 Thread 8 (Thread 0x7fa4d8f6f700 (LWP 5786)): #0 0x00007fa51e5fd05f in pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185 #1 0x00007fa4fbb4a89d in JSC::BlockAllocator::blockFreeingThreadMain() () at /usr/lib64/libQt5WebKit.so.5 #2 0x00007fa4fbe6e2f1 in wtfThreadEntryPoint() () at /usr/lib64/libQt5WebKit.so.5 #3 0x00007fa51e5f90a4 in start_thread (arg=0x7fa4d8f6f700) at pthread_create.c:309 #4 0x00007fa51de0908d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111 Thread 7 (Thread 0x7fa487ffd700 (LWP 5787)): #0 0x00007fa51e5fd05f in pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185 #1 0x00007fa4fbb4b873 in JSC::GCThread::gcThreadMain() () at /usr/lib64/libQt5WebKit.so.5 #2 0x00007fa4fbe6e2f1 in wtfThreadEntryPoint() () at /usr/lib64/libQt5WebKit.so.5 #3 0x00007fa51e5f90a4 in start_thread (arg=0x7fa487ffd700) at pthread_create.c:309 #4 0x00007fa51de0908d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111 Thread 6 (Thread 0x7fa4877fc700 (LWP 5788)): #0 0x00007fa51e5fd05f in pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185 #1 0x00007fa4fbb4b873 in JSC::GCThread::gcThreadMain() () at /usr/lib64/libQt5WebKit.so.5 #2 0x00007fa4fbe6e2f1 in wtfThreadEntryPoint() () at /usr/lib64/libQt5WebKit.so.5 #3 0x00007fa51e5f90a4 in start_thread (arg=0x7fa4877fc700) at pthread_create.c:309 #4 0x00007fa51de0908d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111 Thread 5 (Thread 0x7fa486ffb700 (LWP 5789)): #0 0x00007fa51e5fd05f in pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185 #1 0x00007fa4fbb4b873 in JSC::GCThread::gcThreadMain() () at /usr/lib64/libQt5WebKit.so.5 #2 0x00007fa4fbe6e2f1 in wtfThreadEntryPoint() () at /usr/lib64/libQt5WebKit.so.5 #3 0x00007fa51e5f90a4 in start_thread (arg=0x7fa486ffb700) at pthread_create.c:309 #4 0x00007fa51de0908d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111 Thread 4 (Thread 0x7fa4867fa700 (LWP 5790)): #0 0x00007fa51e5fd05f in pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185 #1 0x00007fa4fbb4b873 in JSC::GCThread::gcThreadMain() () at /usr/lib64/libQt5WebKit.so.5 #2 0x00007fa4fbe6e2f1 in wtfThreadEntryPoint() () at /usr/lib64/libQt5WebKit.so.5 #3 0x00007fa51e5f90a4 in start_thread (arg=0x7fa4867fa700) at pthread_create.c:309 #4 0x00007fa51de0908d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111 Thread 3 (Thread 0x7fa485ff9700 (LWP 5791)): #0 0x00007fa51e5fd05f in pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185 #1 0x00007fa4fbb4b873 in JSC::GCThread::gcThreadMain() () at /usr/lib64/libQt5WebKit.so.5 #2 0x00007fa4fbe6e2f1 in wtfThreadEntryPoint() () at /usr/lib64/libQt5WebKit.so.5 #3 0x00007fa51e5f90a4 in start_thread (arg=0x7fa485ff9700) at pthread_create.c:309 #4 0x00007fa51de0908d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111 Thread 2 (Thread 0x7fa4857f8700 (LWP 5792)): #0 0x00007fa51e5fd05f in pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185 #1 0x00007fa4fbb4b873 in JSC::GCThread::gcThreadMain() () at /usr/lib64/libQt5WebKit.so.5 #2 0x00007fa4fbe6e2f1 in wtfThreadEntryPoint() () at /usr/lib64/libQt5WebKit.so.5 #3 0x00007fa51e5f90a4 in start_thread (arg=0x7fa4857f8700) at pthread_create.c:309 #4 0x00007fa51de0908d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111 Thread 1 (Thread 0x7fa52027a780 (LWP 4984)): [KCrash Handler] #5 0x0000000000000000 in () #6 0x00007fa5016d11c3 in Debugger::Internal::QmlInspectorAgent::clearObjectTree() (this=0xa991fd0) at qml/qmlinspectoragent.cpp:834 #7 0x00007fa51eac2e4f in QMetaObject::activate(QObject*, int, int, void**) (a=0x7fff72435f40, r=0xa991fd0, this=0xe420ac0) at ../../src/corelib/kernel/qobject_impl.h:124 #8 0x00007fa51eac2e4f in QMetaObject::activate(QObject*, int, int, void**) (sender=0x7e9e7c0, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7fff72435f40) at kernel/qobject.cpp:3703 #9 0x00007fa51eac39f7 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) (sender=<optimized out>, m=m@entry=0x7fa5014bbe00 <QmlDebug::BaseEngineDebugClient::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7fff72435f40) at kernel/qobject.cpp:3583 #10 0x00007fa5012ad61e in QmlDebug::BaseEngineDebugClient::newState(QmlDebug::QmlDebugClient::State) (this=<optimized out>, _t1=QmlDebug::QmlDebugClient::NotConnected) at .moc/release-shared/moc_baseenginedebugclient.cpp:168 #11 0x00007fa501298f34 in QmlDebug::QmlDebugConnectionPrivate::disconnected() (this=0x27c5620) at qmldebugclient.cpp:112 #12 0x00007fa50129943e in QmlDebug::QmlDebugConnection::~QmlDebugConnection() (this=0xde70130, __in_chrg=<optimized out>) at qmldebugclient.cpp:286 #13 0x00007fa501299509 in QmlDebug::QmlDebugConnection::~QmlDebugConnection() (this=0xde70130, __in_chrg=<optimized out>) at qmldebugclient.cpp:290 #14 0x00007fa51eac1d5c in QObjectPrivate::deleteChildren() (this=this@entry=0x3cc1bb0) at kernel/qobject.cpp:1951 #15 0x00007fa51eacb9ac in QObject::~QObject() (this=<optimized out>, __in_chrg=<optimized out>) at kernel/qobject.cpp:1031 #16 0x00007fa5016bbe66 in Debugger::Internal::QmlEngine::~QmlEngine() (this=0x3e3a140, __in_chrg=<optimized out>) at qml/qmlengine.cpp:317 #17 0x00007fa5016bbed9 in Debugger::Internal::QmlEngine::~QmlEngine() (this=0x3e3a140, __in_chrg=<optimized out>) at qml/qmlengine.cpp:330 #18 0x00007fa5016c80b1 in Debugger::Internal::QmlCppEngine::~QmlCppEngine() (this=0x2f0a6e0, __in_chrg=<optimized out>) at qml/qmlcppengine.cpp:98 #19 0x00007fa5016c80d9 in Debugger::Internal::QmlCppEngine::~QmlCppEngine() (this=0x2f0a6e0, __in_chrg=<optimized out>) at qml/qmlcppengine.cpp:100 #20 0x00007fa5015a29bb in Debugger::DebuggerRunControl::~DebuggerRunControl() (this=0x40dba30, __in_chrg=<optimized out>) at debuggerruncontrol.cpp:131 #21 0x00007fa5015a29d9 in Debugger::DebuggerRunControl::~DebuggerRunControl() (this=0x40dba30, __in_chrg=<optimized out>) at debuggerruncontrol.cpp:133 #22 0x00007fa503554e40 in ProjectExplorer::Internal::AppOutputPane::createNewOutputWindow(ProjectExplorer::RunControl*) (this=0x27378c0, rc=rc@entry=0xb0480a0) at appoutputpane.cpp:352 #23 0x00007fa50342b0a0 in ProjectExplorer::ProjectExplorerPluginPrivate::startRunControl(ProjectExplorer::RunControl*, Core::Id) (this=this@entry=0x241cc80, runControl=0xb0480a0, runMode=...) at projectexplorer.cpp:1957 #24 0x00007fa50343dc76 in ProjectExplorer::ProjectExplorerPluginPrivate::executeRunConfiguration(ProjectExplorer::RunConfiguration*, Core::Id) (this=this@entry=0x241cc80, runConfiguration=0x2f87740, runMode=...) at projectexplorer.cpp:1938 #25 0x00007fa50343df4f in ProjectExplorer::ProjectExplorerPluginPrivate::buildQueueFinished(bool) (this=0x241cc80, success=<optimized out>) at projectexplorer.cpp:1997 #26 0x00007fa51eac41d6 in QObject::event(QEvent*) (this=0x241cc80, e=<optimized out>) at kernel/qobject.cpp:1246 #27 0x00007fa51f3a1efc in QApplicationPrivate::notify_helper(QObject*, QEvent*) (this=this@entry=0x2294f50, receiver=receiver@entry=0x241cc80, e=e@entry=0x3e3e990) at kernel/qapplication.cpp:3717 #28 0x00007fa51f3a6d48 in QApplication::notify(QObject*, QEvent*) (this=0x7fff72436f80, receiver=0x241cc80, e=0x3e3e990) at kernel/qapplication.cpp:3500 #29 0x00007fa51ea93655 in QCoreApplication::notifyInternal(QObject*, QEvent*) (this=0x7fff72436f80, receiver=0x241cc80, event=event@entry=0x3e3e990) at kernel/qcoreapplication.cpp:965 #30 0x00007fa51ea95817 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) (event=0x3e3e990, receiver=<optimized out>) at kernel/qcoreapplication.h:224 #31 0x00007fa51ea95817 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) (receiver=receiver@entry=0x0, event_type=event_type@entry=0, data=0x2293d30) at kernel/qcoreapplication.cpp:1593 #32 0x00007fa51ea95dc8 in QCoreApplication::sendPostedEvents(QObject*, int) (receiver=receiver@entry=0x0, event_type=event_type@entry=0) at kernel/qcoreapplication.cpp:1451 #33 0x00007fa51eaeafe3 in postEventSourceDispatch(GSource*, GSourceFunc, gpointer) (s=0x234d680) at kernel/qeventdispatcher_glib.cpp:271 #34 0x00007fa51cbd9a04 in g_main_context_dispatch (context=0x7fa50c001710) at gmain.c:3111 #35 0x00007fa51cbd9a04 in g_main_context_dispatch (context=context@entry=0x7fa50c001710) at gmain.c:3710 #36 0x00007fa51cbd9c48 in g_main_context_iterate (context=context@entry=0x7fa50c001710, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at gmain.c:3781 #37 0x00007fa51cbd9cec in g_main_context_iteration (context=0x7fa50c001710, may_block=1) at gmain.c:3842 #38 0x00007fa51eaea45c in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=0x2331140, flags=...) at kernel/qeventdispatcher_glib.cpp:418 #39 0x00007fa51ea91523 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (this=this@entry=0x7fff72436950, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204 #40 0x00007fa51ea99086 in QCoreApplication::exec() () at kernel/qcoreapplication.cpp:1229 #41 0x00007fa51d6e83dc in QGuiApplication::exec() () at kernel/qguiapplication.cpp:1528 #42 0x00007fa51f39e685 in QApplication::exec() () at kernel/qapplication.cpp:2977 #43 0x000000000040a280 in main(int, char**) (argc=1, argv=<optimized out>) at main.cpp:521
| For Gerrit Dashboard: QTCREATORBUG-14972 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 124255,2 | QmlInspector: Fix crash on engine ramp down | 3.5 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |